include/codata_constants_2022.h

ADD_IMPORT extern const int YEAR;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_ELECTRON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MASS_IN_U;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_MOLAR_MASS;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_PROTON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS;
ADD_IMPORT extern const struct codata_constant_type ALPHA_PARTICLE_RMS_CHARGE_RADIUS;
ADD_IMPORT extern const struct codata_constant_type ANGSTROM_STAR;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP;