src/codata_constants_2022_capi.f90

module codata__constants_2022_capi
!! Codata Constants - C API Autogenerated
use, intrinsic :: iso_c_binding, only: c_null_char, c_int
use codata__constants_2022
use codata__constants_type_capi
private

integer(c_int), protected, public, bind(C, name="YEAR") :: capi_YEAR = YEAR !capi

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_ELECTRON_MASS_RATIO") ::&
capi_0 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", "-", "e", "l", "e", "c", "t", &
"r", "o", "n", " ", "m", "a", "s", "s", " ", "r", &
"a", "t", "i", "o", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_ELECTRON_MASS_RATIO%value, &
ALPHA_PARTICLE_ELECTRON_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS") ::&
capi_1 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS%value, &
ALPHA_PARTICLE_MASS%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT") ::&
capi_2 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"e", "n", "e", "r", "g", "y", " ", "e", "q", "u", &
"i", "v", "a", "l", "e", "n", "t", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT%value, &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV") ::&
capi_3 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"e", "n", "e", "r", "g", "y", " ", "e", "q", "u", &
"i", "v", "a", "l", "e", "n", "t", " ", "i", "n", &
" ", "M", "e", "V", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV%value, &
ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MASS_IN_U") ::&
capi_4 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "a", "s", "s", " ", &
"i", "n", " ", "u", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MASS_IN_U%value, &
ALPHA_PARTICLE_MASS_IN_U%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_MOLAR_MASS") ::&
capi_5 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "m", "o", "l", "a", "r", &
" ", "m", "a", "s", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_MOLAR_MASS%value, &
ALPHA_PARTICLE_MOLAR_MASS%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_PROTON_MASS_RATIO") ::&
capi_6 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", "-", "p", "r", "o", "t", "o", &
"n", " ", "m", "a", "s", "s", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_PROTON_MASS_RATIO%value, &
ALPHA_PARTICLE_PROTON_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS") ::&
capi_7 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "r", "e", "l", "a", "t", &
"i", "v", "e", " ", "a", "t", "o", "m", "i", "c", &
" ", "m", "a", "s", "s", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS%value, &
ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ALPHA_PARTICLE_RMS_CHARGE_RADIUS") ::&
capi_8 = capi_constant_type([ &
"a", "l", "p", "h", "a", " ", "p", "a", "r", "t", &
"i", "c", "l", "e", " ", "r", "m", "s", " ", "c", &
"h", "a", "r", "g", "e", " ", "r", "a", "d", "i", &
"u", "s", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ALPHA_PARTICLE_RMS_CHARGE_RADIUS%value, &
ALPHA_PARTICLE_RMS_CHARGE_RADIUS%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ANGSTROM_STAR") ::&
capi_9 = capi_constant_type([ &
"A", "n", "g", "s", "t", "r", "o", "m", " ", "s", &
"t", "a", "r", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ANGSTROM_STAR%value, &
ANGSTROM_STAR%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT") ::&
capi_10 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT%value, &
ATOMIC_MASS_CONSTANT%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT") ::&
capi_11 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
" ", "e", "n", "e", "r", "g", "y", " ", "e", "q", &
"u", "i", "v", "a", "l", "e", "n", "t", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT%value, &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV") ::&
capi_12 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "c", "o", "n", "s", "t", "a", "n", "t", &
" ", "e", "n", "e", "r", "g", "y", " ", "e", "q", &
"u", "i", "v", "a", "l", "e", "n", "t", " ", "i", &
"n", " ", "M", "e", "V", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV%value, &
ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV%uncertainty, &
[ &
"M", "e", "V", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP") ::&
capi_13 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "e", "l", "e", &
"c", "t", "r", "o", "n", " ", "v", "o", "l", "t", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP%uncertainty, &
[ &
"e", "V", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP") ::&
capi_14 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "m", "a", "s", &
"s", " ", "u", "n", "i", "t", "-", "h", "a", "r", &
"t", "r", "e", "e", " ", "r", "e", "l", "a", "t", &
"i", "o", "n", "s", "h", "i", "p", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP%value, &
ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP%uncertainty, &
[ &
"E", "_", "h", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
